// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Collection Horizontal render 1`] = `
<ul
  class="sc-fznyAO fPPEyL horizontal"
  data-testid="timeline-collection"
>
  <li
    class="sc-fznKkj kWlSMh horizontal "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-fzpans jyHixq horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-AxheI eBxqlH"
          title="June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914"
        >
          June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fznKkj kWlSMh horizontal "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-fzpans jyHixq horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-AxheI eBxqlH"
          title="July 28, 1914"
        >
          July 28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fznKkj kWlSMh horizontal "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-fzpans jyHixq horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-AxheI eBxqlH"
          title="August 1–28, 1914"
        >
          August 1–28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fznKkj kWlSMh horizontal "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-fzpans jyHixq horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-AxheI eBxqlH"
          title="September 6, 1914"
        >
          September 6, 1914
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test Collection Tree render 1`] = `
<ul
  class="sc-fznyAO fPPEyL tree"
  data-testid="timeline-collection"
>
  <li
    class="sc-fznKkj kWlSMh tree "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="sc-fznKkj kWlSMh tree "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="sc-fznKkj kWlSMh tree "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="sc-fznKkj kWlSMh tree "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test Collection Vertical render 1`] = `
<ul
  class="sc-fznyAO fPPEyL vertical"
  data-testid="timeline-collection"
>
  <li
    class="sc-fznKkj kWlSMh vertical "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-fzplWN cvmzSX vertical"
      >
        <div
          class="sc-fzpans jyHixq vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-AxheI eBxqlH"
            title="June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914"
          >
            June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914
          </div>
        </div>
        <div
          class="sc-AxjAm egePtC"
        >
          <span
            class="sc-AxirZ itZkid"
          >
            Archduke Franz Ferdinand of Austria and his wife, Sophie, are assassinated by a Bosnian Serb nationalist in Sarajevo.
          </span>
          <div
            class="sc-AxhUy ftcwA-d show-less"
          >
            <p
              class="sc-AxhCb iaRluf"
            />
          </div>
          <span
            class="sc-AxgMl bJuvTb show-more"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fznKkj kWlSMh vertical "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-fzplWN cvmzSX vertical"
      >
        <div
          class="sc-fzpans jyHixq vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-AxheI eBxqlH"
            title="July 28, 1914"
          >
            July 28, 1914
          </div>
        </div>
        <div
          class="sc-AxjAm egePtC"
        >
          <span
            class="sc-AxirZ itZkid"
          >
            World War I begins when Austria-Hungary declares war on Serbia.
          </span>
          <div
            class="sc-AxhUy ftcwA-d show-less"
          >
            <p
              class="sc-AxhCb iaRluf"
            />
          </div>
          <span
            class="sc-AxgMl bJuvTb show-more"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fznKkj kWlSMh vertical "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-fzplWN cvmzSX vertical"
      >
        <div
          class="sc-fzpans jyHixq vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-AxheI eBxqlH"
            title="August 1–28, 1914"
          >
            August 1–28, 1914
          </div>
        </div>
        <div
          class="sc-AxjAm egePtC"
        >
          <span
            class="sc-AxirZ itZkid"
          >
            Germany declares war on Russia, France, and Belgium. Britain declares war on Germany.
    Austria declares war on Russia. Montenegro declares war on Austria. France declares war on Austria.
    Britain declares war on Austria. Montenegro declares war on Germany. Japan declares war on Germany. Austria declares war on Belgium.
          </span>
          <div
            class="sc-AxhUy ftcwA-d show-less"
          >
            <p
              class="sc-AxhCb iaRluf"
            />
          </div>
          <span
            class="sc-AxgMl bJuvTb show-more"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fznKkj kWlSMh vertical "
    width="250"
  >
    <div
      class="sc-Axmtr hYmEjG vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-fzozJi hdDtNg"
      >
        <div
          class="sc-fzoLsD jJElQn vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-fzplWN cvmzSX vertical"
      >
        <div
          class="sc-fzpans jyHixq vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-AxheI eBxqlH"
            title="September 6, 1914"
          >
            September 6, 1914
          </div>
        </div>
        <div
          class="sc-AxjAm egePtC"
        >
          <span
            class="sc-AxirZ itZkid"
          >
            First Battle of the Marne begins. The Germans had advanced to within 30 miles of Paris, but over the next two days, the French are reinforced by 6,000 infantrymen who are transported to the front by hundreds of taxis.
      The Germans dig in north of the Aisne River, and the trench warfare that is to typify the Western Front for the next four years begins.
          </span>
          <div
            class="sc-AxhUy ftcwA-d show-less"
          >
            <p
              class="sc-AxhCb iaRluf"
            />
          </div>
          <span
            class="sc-AxgMl bJuvTb show-more"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
